environments/production-narrative/kubernetes/prometheus/alertmanager/production-alertmanager-narrative-cloud-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-signin: https://$host/oauth2/start
    nginx.ingress.kubernetes.io/auth-url: http://oauth.default.svc.cluster.local:4180/oauth2/auth
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: "monitoring"
  name: production-alertmanager
  namespace: monitoring
spec:
  rules:
  - host: production-alertmanager.narrative.cloud
    http:
      paths:
      - backend:
          serviceName: alertmanager
          servicePort: 9093
  tls:
  - secretName: cloudflare-wildcard-narrative-cloud
    hosts:
      - production-alertmanager.narrative.cloud
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "monitoring"
  name: oauth-production-alertmanager
  namespace: default
spec:
  rules:
  - host: production-alertmanager.narrative.cloud
    http:
      paths:
      - backend:
          serviceName: oauth
          servicePort: 4180
        path: /oauth2
  tls:
  - secretName: cloudflare-wildcard-narrative-cloud
    hosts:
      - production-alertmanager.narrative.cloud
